--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "panel-ui",
-  "version": "0.0.0",
+  "name": "panel-ui-monorepo",
   "private": true,
   "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build"
-  },
-  "dependencies": {
-    "vue": "^3.5.18"
+    "dev": "pnpm --filter demo-app dev",
+    "build": "pnpm --filter panel-ui build",
+    "build:demo": "pnpm --filter demo-app build",
+    "test": "pnpm --filter panel-ui test",
+    "lint": "pnpm --recursive lint",
+    "type-check": "pnpm --recursive type-check",
+    "release:panel-ui": "pnpm -F panel-ui exec -- npx --no-install semantic-release -e semantic-release-monorepo",
+    "release:panel-ui:dry": "pnpm -F panel-ui exec -- npx --no-install semantic-release -e semantic-release-monorepo --dry-run"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.16.5",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.7.0",
-    "npm-run-all2": "^8.0.4",
-    "typescript": "~5.8.0",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vue-tsc": "^3.0.4"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0",
+    "semantic-release": "^19",
+    "semantic-release-monorepo": "^7",
+    "@semantic-release/changelog": "^6",
+    "@semantic-release/commit-analyzer": "^10",
+    "@semantic-release/git": "^10",
+    "@semantic-release/github": "^9",
+    "@semantic-release/npm": "^10",
+    "@semantic-release/release-notes-generator": "^11"
   }
 }
